# EngineeringHub

./: .gitignore  404.html  README.md  index.html
bash/: README.md  basic_examples.sh  ping_tools.sh
c/: a.out  main.c  main.cpp
example/c/: CMakeLists.txt  Kconfig  Makefile
example/c/cmake/: CustomTools.cmake  DependencyCheck.cmake  Git.cmake  SystemCheck.cmake
example/c/config/: defconfig
example/c/include/: algorithm_lab.h  common.h  stdio_fundamentals.h
example/c/src/: algorithm_lab.c  algorithms.c  dynamic_memory.c  file_operations.c  stdio_fundamentals.c  system_network_ip_reader.c
example/c/src/tutorial/: basics.c  bitwise.c  functions.c  io.c  memory.c  pointers.c  preprocessor.c  strings.c  structs.c  time_demo.c
example/cpp/: CMakeLists.txt
example/cpp/include/: basics.hpp
example/cpp/src/: loading_sim.cpp
example/cpp/src/tutorial/: banka.cpp  basics.cpp  smart_pointers.cpp  type_casting.cpp
md/ai/fundamentals/: index.html
md/ai/image_processing/: index.html
md/ai/machine_learning_workflow/: index.html
md/ai/neural_networks/: index.html
md/ai/tools/: index.html
md/communication/ipc/: index.html
md/communication/protocol/: index.html
md/devops/algorithms/: index.html
md/devops/docker/: index.html
md/devops/git/: index.html
md/devops/gstreamer/: index.html
md/devops/vim/: index.html
md/embedded/avr/: index.html
md/embedded/concepts/: index.html
md/embedded/protocols/: index.html
md/embedded/rtos/: index.html
md/embedded/stm/: index.html
md/linux/basics/: index.html
md/linux/commands_utilities/: index.html
md/linux/jetson/: index.html
md/linux/networking/: index.html
md/linux/package_management/: index.html
md/linux/problems_and_solutions/: index.html
md/linux/raspberry/: index.html
md/linux/services_daemons/: index.html
md/linux/shell_scripting/: index.html
md/programming/c/: index.html
md/programming/compiler/: index.html
md/programming/cpp/: index.html
md/programming/design_pattern/: index.html
md/programming/kotlin/: index.html
md/programming/python/: index.html
md/programming/qt/: index.html
md/robotics/control/: index.html
md/robotics/gazebo/: index.html
md/robotics/ros2/: index.html
search/: search_index.json
tech_notebook/: mkdocs.yml
tech_notebook/docs/: index.md
tech_notebook/docs/assets/css/: extra.css
tech_notebook/docs/assets/js/: extra.js
tech_notebook/docs/md/ai/: fundamentals.md  hailo.md  image_processing.md  machine_learning_workflow.md  neural_networks.md  onnx_tensorrt.md  opencv.md  pytorch.md  tools.md  yolo.md
tech_notebook/docs/md/communication/: ipc.md  protocol.md
tech_notebook/docs/md/devops/: algorithms.md  docker.md  git.md  gstreamer.md  vim.md
tech_notebook/docs/md/embedded/: avr.md  concepts.md  protocols.md  rtos.md  stm.md
tech_notebook/docs/md/linux/: basics.md  commands_utilities.md  device_tree.md  jetson.md  networking.md  package_management.md  problems_and_solutions.md  raspberry.md  services_daemons.md  shell_scripting.md
tech_notebook/docs/md/programming/: c.md  c_cpp.md  compiler.md  cpp.md  design_pattern.md  kotlin.md  python.md  qml_xml.md  qt.md  software_design.md
tech_notebook/docs/md/robotics/: control.md  gazebo.md  ros2.md  vio.md
